--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@tailwindcss/typography": "^0.5.9",
     "nuxt": "^3.2.2",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "@ubclaunchpad/vue-fathom": "^2.0.0"
   }
 }
