--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.6.0",
-    "@nuxtjs/tailwindcss": "^6.7.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
     "nuxt": "^3.2.2",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "nuxt-icon": "^0.5.0",
+    "sitemap": "^7.1.1",
+    "@nuxt/image": "1.0.0-rc.2",
+    "rss": "^1.2.2",
+    "@types/rss": "^0.0.30",
+    "nuxt-headlessui": "^1.1.4"
   },
   "dependencies": {
     "@ubclaunchpad/vue-fathom": "^2.0.0",
-    "nuxt-simple-sitemap": "^2.7.0"
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
