--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "devDependencies": {
     "@nuxt/content": "^2.6.0",
     "nuxt": "^3.2.2",
-    "tailwindcss": "^3.3.2",
+    "@types/node": "^18.18.0",
     "nuxt-icon": "^0.5.0",
     "sitemap": "^7.1.1",
     "@nuxt/image": "1.0.0-rc.2",
     "rss": "^1.2.2",
     "@types/rss": "^0.0.30",
-    "nuxt-headlessui": "^1.1.4"
+    "nuxt-headlessui": "^1.1.4",
+    "@nuxtjs/tailwindcss": "^6.8.0"
   },
   "dependencies": {
     "@ubclaunchpad/vue-fathom": "^2.0.0",
     "@headlessui/tailwindcss": "^0.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "tailwindcss": "^3.3.2"
   }
 }
